syntax = "proto3";
option go_package = "github.com/alvidir/filebrowser/proto";

package proto;
import "proto/file.proto";

message Path {
    string absolute = 1;
}

message Directory {
    string id = 1;
    Path path = 2;
    repeated File files = 3;
}

message DeleteRequest {
    repeated Path paths = 1;
}

message MoveRequest {
    repeated Path paths = 1;
    Path destination = 2;
}

message SearchRequest {
    string search = 1;
}

message SearchMatch {
    File file = 1;
    int32 matchStart = 2;
    int32 matchEnd = 3;
}

message SearchResponse {
    repeated SearchMatch matches = 1;
}

service DirectoryService {
    rpc Get(Path) returns (Directory);
    rpc Delete(Path) returns (Directory);
    rpc Move(MoveRequest) returns (Directory);
    rpc Search(SearchRequest) returns (SearchResponse);
}